API type null
Se agregaron excepcion de null en las APIs para edicion y creacion de un documento.

Se agrego objeto virtual fechas en etapa con datos de fechaInicio y fechaFin
